// DO NOT MODIFY
syntax = "proto3";

// DO NOT MODIFY
package disfuser;

message FRequest {
    uint32 uid = 1;
    uint32 gid = 2;
    uint32 pid = 3;
}

message LockOwner {
    uint64 lock_owner = 1;
}

message Read {
    FRequest frequest = 1;
    uint64 ino = 2;
    uint64 fh = 3;
    int64 offset= 4;
    uint32 size = 5;
    int32 flags = 6;
    LockOwner lock_owner = 7;
}

message Data {
    uint32 data = 1; // [u8]
}

message Write {
    FRequest frequest = 1;
    uint64 ino = 2;
    uint64 fh = 3;
    int64 offset= 4;
    string data = 5; // [u8]
    uint32 write_flag = 6;
    int32 flags = 7;
    LockOwner lock_owner = 8;
}

message LookUp {
    FRequest frequest = 1;
    uint64 parent = 2;
    // OsStr name = 3;
    string name = 3;
}

message Create {
    FRequest frequest = 1;
    uint64 parent = 2;
    // OsStr name = 3;
    string name = 3;
    uint32 mode= 4;
    uint32 umask = 5;
    int32 flags = 6;
}

message Unlink {
    FRequest frequest = 1;
    uint64 parent = 2;
    // OsStr name = 3;
    string name = 3;
}

message Reply {
    string message = 1; // [u8] or fileAttr string
    int32 errcode = 2; // for the Err when unwrap
}

message writeReply {
    uint32 size = 1;
    int32 errcode = 2;
}

message createReply {
    string fileAttr = 1;
    uint64 fh = 2;
    int32 errcode = 3;
}

message unlinkReply {
    int32 errcode = 1;
}

service disfuser {
    rpc read(Read) returns (stream Reply) {}
    rpc write(stream Write) returns (writeReply) {}
    rpc lookup(LookUp) returns (Reply) {} 
    rpc create(Create) returns (createReply) {} 
    rpc unlink(Unlink) returns (unlinkReply) {} 
}
